@@ -8,6 +8,9 @@ Features:
   Thanks to Null000 for the patches.
   Closes: GH bug #48
 
+Fixes:
+- comics: Get larger images from GoComics.
+
 
 Dosage 2.8 (released 8.12.2013)
 
